crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-8.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/pr-425-backstop/action.yml\")).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:14:19
   |
13 |       run: |
   |       ^^^ this run block
14 |         hello ${{ inputs.expandme }}
   |                   ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High
   = note: this finding has an auto-fix

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:20:29
   |
18 |       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action accepts arbitrary code
19 |       with:
20 |         script: return "${{ inputs.expandme }}"
   |         ^^^^^^              ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |         |
   |         via this input
   |
   = note: audit confidence → High

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:26:27
   |
23 |       uses: azure/cli@089eac9d8cc39f5d003e94f8b65efc51076c9cbd
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action accepts arbitrary code
24 |       with:
25 |         inlineScript: |
   |         ^^^^^^^^^^^^ via this input
26 |           echo "hello ${{ inputs.expandme }}"
   |                           ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:31:56
   |
29 |       uses: azure/powershell
   |       ^^^^^^^^^^^^^^^^^^^^^^ action accepts arbitrary code
30 |       with:
31 |         inlineScript: Get-AzVM -ResourceGroupName "${{ inputs.expandme }}"
   |         ^^^^^^^^^^^^ via this input                    ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:29:7
   |
29 |       uses: azure/powershell
   |       ^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

9 findings (4 suppressed, 1 fixable): 0 unknown, 0 informational, 0 low, 0 medium, 5 high
